--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,89 +1,145 @@
 {% load static %}
+
 <header class="section-header">
-    <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
+    <!-- Top Navigation Bar -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark py-2">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop4"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- Logo on the Left -->
+            <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
+                <img src="{% static 'images/Logo2.png' %}" alt="Adele Glorious Gifts" class="logo">Adele Glorious Gifts
+            </a>
+
+            <!-- Toggle Button for Mobile -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTop4">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item dropdown">
-                        <a href="#" class="nav-link"> English </a>
 
+            <!-- Main Navbar: Navigation Links in the Middle -->
+            <div class="collapse navbar-collapse justify-content-center" id="navbarMain">
+                <ul class="navbar-nav">
+                    <!-- Navigation Links -->
+                    <li class="nav-item">
+                        <a href="{% url 'home' %}" class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a href="#" class="nav-link"> USD </a>
+                    <li class="nav-item">
+                        <a href="{% url 'store' %}" class="nav-link">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Contact Us</a>
                     </li>
                 </ul>
+            </div>
+
+            <!-- Right Side (Contact Info, Language, and Account) -->
+            <div class="d-none d-md-flex align-items-center">
+                <!-- Contact Info -->
                 <ul class="navbar-nav">
-                    <li><a href="#" class="nav-link"> <i class="fa fa-envelope"></i> Email </a></li>
-                    <li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> Call us </a></li>
-                </ul> <!-- list-inline //  -->
-            </div> <!-- navbar-collapse .// -->
-        </div> <!-- container //  -->
+                    <li class="nav-item">
+                        <a href="mailto:info@adelegifts.com" class="nav-link"><i class="fa fa-envelope"></i> info@adelegifts.com</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="tel:+123456789" class="nav-link"><i class="fa fa-phone"></i> +123 456 789</a>
+                    </li>
+                </ul>
+
+                <!-- Language Dropdown -->
+                <div class="dropdown ml-3">
+                    <button class="btn btn-light dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Language
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="languageDropdown">
+                        <a class="dropdown-item" href="?lang=en">English</a>
+                        <a class="dropdown-item" href="?lang=es">Español</a>
+                        <a class="dropdown-item" href="?lang=fr">Français</a>
+                        <!-- Add more languages as needed -->
+                    </div>
+                </div>
+            </div>
+        </div>
     </nav>
 
-    <section class="header-main border-bottom">
+    <!-- Main Navigation: Categories, Search, Account, and Cart -->
+    <section class="header-main py-3" style="background-color:#800020;">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-2 col-md-3 col-6">
-                    <a href="{% url 'home' %}" class="brand-wrap">
-                        <img class="logo" src="{% static 'images/logo.png' %}">
-                    </a> <!-- brand-wrap.// -->
-                </div>
-                <div class="col-lg col-sm col-md col-6 flex-grow-0">
-                    <div class="category-wrap dropdown d-inline-block float-right">
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-bars"></i> All category
+                <!-- Category Dropdown -->
+                <div class="col-lg-2 col-md-3 col-12">
+                    <div class="category-wrap dropdown">
+                        <button class="btn btn-gold dropdown-toggle w-100" type="button" id="categoryDropdown" data-toggle="dropdown">
+                            <i class="fa fa-bars"></i> Categories
                         </button>
                         <div class="dropdown-menu">
-                         
                             <a class="dropdown-item" href="{% url 'store' %}">All Products</a>
                             {% for category in links %}
-                                
-                            
-                                
-                            <a class="dropdown-item" href="{{category.get_absolute_url}}">{{category.category_name}} </a>
+                                <a class="dropdown-item" href="{{ category.get_absolute_url }}">{{ category.category_name }}</a>
                             {% endfor %}
                         </div>
-                    </div> <!-- category-wrap.// -->
-                </div> <!-- col.// -->
-                <a href="{% url 'store' %}" class="btn btn-outline-primary">Store</a>
-                <div class="col-lg  col-md-6 col-sm-12 col">
-                    <form action="{% url 'search' %}" class="search" method="GET">
-                        <div class="input-group w-100">
-                            <input type="text" class="form-control" style="width:60%;" placeholder="Search" name="keyword">
+                    </div>
+                </div>
 
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="submit">
-                                    <i class="fa fa-search"></i>
-                                </button>
+                <!-- Search Bar -->
+                <div class="col-lg-6 col-md-9 col-12">
+                    <form action="{% url 'search' %}" method="GET" class="search d-flex">
+                        <input type="text" name="keyword" class="form-control" placeholder="Search handcrafted gifts..." style="flex:1;">
+                        <button class="btn btn-gold" type="submit">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </form>
+                </div>
+
+                <!-- Account & Cart -->
+                <div class="col-lg-4 col-md-12 col-12 text-right">
+                    <div class="d-inline-flex align-items-center">
+                        {% if user.is_authenticated %}
+                            <div class="mr-4">
+                                <small class="text-muted">Welcome, {{ user.first_name }}</small><br>
+                                <a href="{% url 'dashboard' %}" class="text-light">Dashboard</a> | <a href="{% url 'logout' %}" class="text-light">Logout</a>
                             </div>
-                        </div>
-                    </form> <!-- search-wrap .end// -->
-                </div> <!-- col.// -->
-                <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
-                    <div class="d-flex justify-content-end mb-3 mb-lg-0">
-                        <div class="widget-header">
-                            <small class="title text-muted">Welcome guest!</small>
-                            <div>
-                                <a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-                                <a href="./register.html"> Register</a>
+                        {% else %}
+                            <div class="mr-4">
+                                <small class="text-muted">Welcome, Guest!</small><br>
+                                <a href="{% url 'login' %}" class="text-light">Sign In</a> | <a href="{% url 'register' %}" class="text-light">Register</a>
                             </div>
-                        </div>
-                        <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
-                            <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i>
-                            </div>
-<span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
-                        </a>
-                    </div> <!-- widgets-wrap.// -->
-                </div> <!-- col.// -->
-            </div> <!-- row.// -->
-        </div> <!-- container.// -->
-    </section> <!-- header-main .// -->
+                        {% endif %}
+                    </div>
 
+                    <!-- Cart -->
+                    <a href="{% url 'cart' %}" class="btn btn-gold position-relative">
+                        <i class="fa fa-shopping-cart"></i> Cart
+                        <span class="badge badge-danger position-absolute" style="top: -8px; right: -8px;">{{ cart_count }}</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+</header>
 
+<style>
+    .btn-gold {
+        background-color: #C0A775;
+        color: white;
+    }
 
+    .btn-gold:hover {
+        background-color: #b59060;
+        color: #fff;
+    }
 
-</header> <!-- section-header.// -->
+    .category-wrap .btn-primary {
+        background-color: #800020;
+        border-color: #800020;
+    }
+
+    /* Adjusting the navbar brand logo and right-side contact info */
+    .navbar-brand {
+        margin-right: auto;
+    }
+
+    .navbar-nav {
+        display: flex;
+        justify-content: center;
+    }
+</style>
