--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -2,98 +2,67 @@
 {% load static %}
 {% block content %}
 
-<!-- ========================= SECTION PAGETOP ========================= -->
-<section class="section-pagetop bg">
-    <div class="container">
-        
-        {% if 'search' in request.path %}
-            <!-- search result -->
-            <h2 class="title-page">Search Result</h2>
-             {% else %}
-             <h2 class="title-page">Our Store</h2>
-        {% endif %}
-            
- 
-
-    </div> <!-- container //  -->
-</section>
-<!-- ========================= SECTION INTRO END// ========================= -->
-
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content padding-y">
     <div class="container">
-
         <div class="row">
+            <!-- Sidebar Filters -->
             <aside class="col-md-3">
-
-                <div class="card">
+                <div class="card shadow-sm mb-4">
                     <article class="filter-group">
-                        <header class="card-header">
-                            <a href="#" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" class="">
-                                <i class="icon-control fa fa-chevron-down"></i>
-                                <h6 class="title">Categories</h6>
-                            </a>
+                        <header class="card-header" data-toggle="collapse" data-target="#collapse_1"
+                            aria-expanded="true">
+                            <i class="icon-control fa fa-chevron-down"></i>
+                            <h6 class="title">Categories</h6>
                         </header>
-                        <div class="filter-content collapse show" id="collapse_1" style="">
+                        <div class="filter-content collapse show" id="collapse_1">
                             <div class="card-body">
-
                                 <ul class="list-menu">
-                                    <li><a href="{% url 'store' %}">All Products</a></li>                                 
+                                    <li><a href="{% url 'store' %}">All Products</a></li>
                                     {% for category in links %}
-                                    <li><a href="{{category.get_absolute_url}}">{{category.category_name}}</a></li>
+                                    <li><a href="{{ category.get_absolute_url }}">{{ category.category_name }}</a></li>
                                     {% endfor %}
                                 </ul>
-
-                            </div> <!-- card-body.// -->
+                            </div>
                         </div>
-                    </article> <!-- filter-group  .// -->
-                    <article class="filter-group">
-                        <header class="card-header">
-                            <a href="#" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" class="">
-                                <i class="icon-control fa fa-chevron-down"></i>
-                                <h6 class="title">Sizes </h6>
-                            </a>
-                        </header>
-                        <div class="filter-content collapse show" id="collapse_4" style="">
-                            <div class="card-body">
-                                <label class="checkbox-btn">
-                                    <input type="checkbox">
-                                    <span class="btn btn-light"> XS </span>
-                                </label>
-
-                                <label class="checkbox-btn">
-                                    <input type="checkbox">
-                                    <span class="btn btn-light"> SM </span>
-                                </label>
-
-                                <label class="checkbox-btn">
-                                    <input type="checkbox">
-                                    <span class="btn btn-light"> LG </span>
-                                </label>
-
-                                <label class="checkbox-btn">
-                                    <input type="checkbox">
-                                    <span class="btn btn-light"> XXL </span>
-                                </label>
-                            </div><!-- card-body.// -->
-                        </div>
-                    </article> <!-- filter-group .// -->
+                    </article>
 
                     <article class="filter-group">
-                        <header class="card-header">
-                            <a href="#" data-toggle="collapse" data-target="#collapse_3" aria-expanded="true" class="">
-                                <i class="icon-control fa fa-chevron-down"></i>
-                                <h6 class="title">Price range </h6>
-                            </a>
+                        <header class="card-header" data-toggle="collapse" data-target="#collapse_4"
+                            aria-expanded="true">
+                            <i class="icon-control fa fa-chevron-down"></i>
+                            <h6 class="title">Sizes</h6>
                         </header>
-                        <div class="filter-content collapse show" id="collapse_3" style="">
+                        <div class="filter-content collapse show" id="collapse_4">
                             <div class="card-body">
+                                <label class="checkbox-btn">
+                                    <input type="checkbox"><span class="btn btn-light"> XS </span>
+                                </label>
+                                <label class="checkbox-btn">
+                                    <input type="checkbox"><span class="btn btn-light"> SM </span>
+                                </label>
+                                <label class="checkbox-btn">
+                                    <input type="checkbox"><span class="btn btn-light"> LG </span>
+                                </label>
+                                <label class="checkbox-btn">
+                                    <input type="checkbox"><span class="btn btn-light"> XXL </span>
+                                </label>
+                            </div>
+                        </div>
+                    </article>
 
+                    <article class="filter-group">
+                        <header class="card-header" data-toggle="collapse" data-target="#collapse_3"
+                            aria-expanded="true">
+                            <i class="icon-control fa fa-chevron-down"></i>
+                            <h6 class="title">Price Range</h6>
+                        </header>
+                        <div class="filter-content collapse show" id="collapse_3">
+                            <div class="card-body">
                                 <div class="form-row">
                                     <div class="form-group col-md-6">
                                         <label>Min</label>
-                                        <!-- <input class="form-control" placeholder="$0" type="number"> -->
-                                        <select class="mr-2 form-control">
+                                        <select class="form-control">
                                             <option value="0">$0</option>
                                             <option value="50">$50</option>
                                             <option value="100">$100</option>
@@ -103,9 +72,9 @@
                                             <option value="1000">$1000</option>
                                         </select>
                                     </div>
-                                    <div class="form-group text-right col-md-6">
+                                    <div class="form-group col-md-6 text-right">
                                         <label>Max</label>
-                                        <select class="mr-2 form-control">
+                                        <select class="form-control">
                                             <option value="50">$50</option>
                                             <option value="100">$100</option>
                                             <option value="150">$150</option>
@@ -115,90 +84,169 @@
                                             <option value="2000">$2000+</option>
                                         </select>
                                     </div>
-                                </div> <!-- form-row.// -->
-                                <button class="btn btn-block btn-primary">Apply</button>
-                            </div><!-- card-body.// -->
+                                </div>
+                                <button class="btn btn-primary btn-block">Apply</button>
+                            </div>
                         </div>
-                    </article> <!-- filter-group .// -->
+                    </article>
+                </div>
+            </aside>
 
-                </div> <!-- card.// -->
-
-            </aside> <!-- col.// -->
+            <!-- Products Grid -->
             <main class="col-md-9">
-
-                <header class="border-bottom mb-4 pb-3">
-                    <div class="form-inline">
-                        <span class="mr-md-auto">{{product_count}} Items found </span>
-
-                    </div>
-                </header><!-- sect-heading -->
+                <header class="border-bottom mb-4 pb-3 d-flex justify-content-between">
+                    <span>{{ product_count }} Items found</span>
+                </header>
 
                 <div class="row">
                     {% if products %}
                     {% for product in products %}
-                    <div class="col-md-4">
-                        <figure class="card card-product-grid">
+                    <div class="col-md-4 mb-4">
+                        <figure class="card card-product-grid shadow-sm h-100">
                             <div class="img-wrap">
-                                <a href="{{product.get_url}}"><img src="{{product.image.url}}"></a>
-                            </div> <!-- img-wrap.// -->
+                                <a href="{{ product.get_url }}">
+                                    <img src="{{ product.image.url }}" alt="{{ product.product_name }}"
+                                        class="img-fluid" style="height: 250px; object-fit: cover;">
+                                </a>
+                            </div>
                             <figcaption class="info-wrap">
                                 <div class="fix-height">
-                                    <a href="{{product.get_url}}" class="title">{{product.product_name}}</a>
+                                    <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
                                     <div class="price-wrap mt-2">
-                                        <span class="price">${{product.price}}</span>
-                                    </div> <!-- price-wrap.// -->
+                                        <span class="price">${{ product.price }}</span>
+                                    </div>
                                 </div>
-                                <a href="{{product.get_url}}" class="btn btn-block btn-primary">View Details </a>
+                                <a href="{{ product.get_url }}" class="btn btn-primary btn-block">View Details</a>
                             </figcaption>
                         </figure>
-                    </div> <!-- col.// -->
+                    </div>
                     {% endfor %}
                     {% else %}
-                    <div>
-                        <h2>No Results found, Please try again.</h2>
-                        {% endif %}
+                    <div class="col-12">
+                        <h2 class="text-center">No Results Found</h2>
                     </div>
-                </div> <!-- row end.// -->
+                    {% endif %}
+                </div>
 
-
-                <nav class="mt-4" aria-label="Page navigation sample">
-                    
+                <!-- Pagination -->
+                <nav class="mt-4">
                     {% if products.has_other_pages %}
-                        
-                    
-                        
-                    <ul class="pagination">
+                    <ul class="pagination justify-content-center">
                         {% if products.has_previous %}
-                        <li class="page-item"><a class="page-link" href="?page={{products.previous_page_number}}">Previous</a></li>
+                        <li class="page-item"><a class="page-link"
+                                href="?page={{ products.previous_page_number }}">Previous</a></li>
                         {% else %}
                         <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
                         {% endif %}
-                        
-                        {% for i in products.paginator.page_range %}
-                            
-                            {% if products.number == i %}
-            <li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
-{% else %}
-<li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
 
-                            {% endif %}
+                        {% for i in products.paginator.page_range %}
+                        {% if products.number == i %}
+                        <li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
+                        {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                        {% endif %}
                         {% endfor %}
 
                         {% if products.has_next %}
-                        <li class="page-item"><a class="page-link" href="?page={{products.next_page_number}}">Next</a></li>
-                      {% else %}
-                      <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
-
-                      {% endif %}
+                        <li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}">Next</a>
+                        </li>
+                        {% else %}
+                        <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+                        {% endif %}
                     </ul>
                     {% endif %}
                 </nav>
-
-            </main> <!-- col.// -->
-
+            </main>
         </div>
-
-    </div> <!-- container .//  -->
+    </div>
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
+<style>
+    .card.card-product-grid {
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    
+    .card.card-product-grid:hover {
+        transform: translateY(-10px); /* Moves the card up by 10px */
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); /* Adds a shadow effect on hover */
+    }
+    
+
+    /* Make the filter sidebar prominent */
+    aside.card {
+        background-color: #f9f9f9;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        padding: 15px;
+        margin-bottom: 20px;
+    }
+
+    /* Style filter headers to stand out */
+    .card-header {
+        background-color: #800020;
+        color: white;
+        padding: 10px;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+    }
+
+    .card-header:hover {
+        background-color: #600016;
+    }
+
+    /* Filter content padding */
+    .filter-content {
+        padding-top: 15px;
+    }
+
+    /* Styling filter buttons like checkboxes */
+    .checkbox-btn input[type="checkbox"] {
+        display: none;
+    }
+
+    .checkbox-btn span {
+        padding: 8px 15px;
+        margin: 5px 0;
+        background-color: #f0f0f0;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        cursor: pointer;
+        display: inline-block;
+    }
+
+    .checkbox-btn input[type="checkbox"]:checked+span {
+        background-color: #800020;
+        color: white;
+        border-color: #800020;
+    }
+
+    /* Collapsible arrow icon rotation */
+    .card-header .fa-chevron-down {
+        transition: transform 0.3s;
+    }
+
+    .card-header.collapsed .fa-chevron-down {
+        transform: rotate(180deg);
+    }
+
+    /* Sticky sidebar filter */
+    @media (min-width: 768px) {
+        aside.card {
+            position: sticky;
+            top: 100px;
+        }
+    }
+
+    /* Make filter sidebar full-width on mobile */
+    @media (max-width: 767px) {
+        aside.col-md-3 {
+            width: 100%;
+            margin-bottom: 20px;
+        }
+
+    }
+</style>
+
 {% endblock content %}
